--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,nextjs,dotenv,macos,linux,windows,webstorm
+
+.open-next/
+.wrangler/
